# servant

./: cabal.project  sources.txt  stack.yaml
cabal-doctest-cli/: cabal-doctest-cli.cabal
cabal-doctest-cli/src/Cabal/Doctest/: Cli.hs
servant/: CHANGELOG.md  servant.cabal
servant-client/: CHANGELOG.md
servant-client-core/: CHANGELOG.md
servant-client-core/test/Servant/Client/Core/Internal/: HasClientSpec.hs
servant-server/example/: greet.hs
servant-server/src/Servant/Server/: Internal.hs
servant/src/Servant/: API.hs
servant/src/Servant/API/: Redirect.hs
servant/test/: doctests.hs
