cabal-version: 1.12
name:          cabal-doctest-cli
version:       0

synopsis: Run doctests without custom setup
category: Distribution, Testing
description:
  Run doctetest without custom setup.
  .
  Successor of <http://hackage.haskell.org/package/cabal-doctest>

build-type: Simple

license: GPL-3.0

tested-with:
  GHC==8.6.1,
  GHC==8.4.3,
  GHC==8.2.2,
  GHC==8.0.2,
  GHC==7.10.3,
  GHC==7.8.4,
  GHC==7.6.3

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall
  build-depends:
      base       >=4.6     && <4.13
    , Cabal      >=2.2     && <2.3
    , cabal-plan >=0.3.0.0 && <0.4
    , containers
    , directory
    , doctest    >=0.15    && <0.16
    , filepath
    , Glob       >=0.9.2   && <0.10
    , text       >=1.2.3.0 && <1.3
  exposed-modules:
    Cabal.Doctest.Cli
